testdata/baselines/reference/submodule/conformance/FunctionDeclaration2_es6(alwaysstrict=false).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
FunctionDeclaration2_es6.ts(1,12): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== FunctionDeclaration2_es6.ts (1 errors) ====
    function f(yield) {
               ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    }